--- a/src/components/styles/Form.css
+++ b/src/components/styles/Form.css
@@ -6,12 +6,13 @@
     border-radius: 10px;
     box-sizing: border-box;
     padding: 20px 30px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   
   .title {
     text-align: center;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    
     margin: 10px 0 30px 0;
     font-size: 28px;
     font-weight: 800;
@@ -32,6 +33,7 @@
     outline: 0 !important;
     box-sizing: border-box;
     padding: 12px 15px;
+    margin-top: 10px;
   }
   
   .page-link {
@@ -41,11 +43,13 @@
     color: #747474;
     text-decoration-color: #747474;
   }
-  
+  .confirm-label{
+    font-size: 11px;
+    font-weight: 500;
+  }
   .page-link-label {
     cursor: pointer;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    
     font-size: 9px;
     font-weight: 700;
   }
@@ -56,8 +60,7 @@
   
   .form-btn {
     padding: 10px 15px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    
     border-radius: 20px;
     border: 0 !important;
     outline: 0 !important;
@@ -75,8 +78,7 @@
     margin: 0;
     font-size: 10px;
     color: #747474;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    
   }
   
   .sign-up-link {
@@ -87,8 +89,7 @@
     color: teal;
     cursor: pointer;
     font-weight: 800;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    
   }
   
   .buttons-container {
@@ -111,8 +112,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    
     font-size: 11px;
     gap: 5px;
   }
